--- a/public/index.html
+++ b/public/index.html
@@ -131,7 +131,7 @@
 
           <div class="form-group">
             <div class="col-sm-10 col-sm-offset-2">
-              <button class="btn btn-primary" id="Post">Post Comment</button>
+              <button id="Post">Post Comment</button>
             </div>
           </div>
         </form>
